[package]
name = "lmsh"
version = "0.1.0"
edition = "2018"
description = "A minimal shell compatible with `/bin/sh`."
repository = "https://github.com/Lazerbeak12345/lmsh"
license = "MIT"
keywords = ["language", "shell", "interpreter", "command", "coreutils"]# max 5
categories = ["command-line-utilities", "compilers", "parser-implementations", "wasm", "filesystem"]
publish = false # Don't publish till criteria is met in the README
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine="4.6"
#TODO add? duct = "0.13"
#TODO add? signal-hook = "0.3.10"

[dev-dependencies]
proptest="1.0"
mockall = "0.10"
